--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.projectlombok:lombok:1.18.22'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
 }
 
 tasks.named('test') {
